# reicast-emulator

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .travis.yml  BuildingWithCMake.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  LICENSE-LGPL  Makefile  Makefile.common  README.md  appveyor.yml  azure-pipelines.yml  bitrise.yml  cmake_install.cmake  directfb.diff  issue_template.md  libreicast.info  multipass.diff  no-libco.patch  rtt.diff  wercker.yml  wip.diff
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
WorkDir/webui/: debugger.html
aica-dsp-asm/: build_linux.sh  build_macos.sh  macos_support.mm  main.cpp
bs/gdtool/: gdtool.vcxproj.filters
bs/reprof/: LICENSE  deasm.sh  reprof.sln
bs/snap/: snapcraft.yaml
cmake/: android.cmake  config.cmake  deps.cmake  devkitA64.cmake  libdreamcast.cmake  libosd.cmake  ps4sdk.cmake
core/: .clang-format  .gitignore  README.md  build.h  cheats.cpp  core.mk  dispframe.cpp  emulator.h  libdreamcast.cpp  nullDC.cpp  nullDC.h  nullDC_libretro.cpp  rec.cpp  rom_luts.c  rom_luts.h  serialize.cpp  stdclass.cpp  stdclass.h  types.h  version.h  version.h.in
core/archive/: 7zArchive.cpp  7zArchive.h  ZipArchive.cpp  ZipArchive.h  archive.cpp  archive.h
core/arm_emitter/: E_Branches.h  E_DataOp.h  E_Extend.h  E_LoadStore.h  E_Misc.h  E_Multiply.h  E_Parallel.h  E_Special.h  E_Status.h  E_VDataOp.h  E_VLoadStore.h  E_VRegXfer.h  H_Branches.h  H_LoadStore.h  arm_coding.h  arm_disasm.h  arm_emitter.h  arm_registers.h
core/cfg/: cfg.cpp  cfg.h  cfg_libretro.cpp  cl.cpp  ini.cpp  ini.h  settings.cpp
core/emitter/: README.md  emitter.vcxproj  generated_class_names.h  generated_class_names_string.h  generated_indexes.h  types.h  x86_emitter.cpp  x86_emitter.h  x86_matcher.h  x86_op_classes.h  x86_op_encoder.h  x86_op_table.h
core/imgread/: ImgReader.cpp  ImgReader.h  SCSIDEFS.H  cdi.cpp  chd.cpp  common.cpp  common.h  cue.cpp  gd_driver.h  gdi.cpp  ioctl.cpp  mds.cpp  mds.h  mds_reader.cpp  mds_reader.h
core/input/: gamepad.h  gamepad_device.cpp  gamepad_device.h  keyboard_device.cpp  keyboard_device.h  mapping.cpp  mapping.h
core/libretro/: audiostream.cpp  common.cpp  context.cpp  glsym_private.h  keyboard_map.h  libretro.cpp  libretro_core_option_defines.h  libretro_core_options.h  libretro_core_options_intl.h  reicast.h  vmem_utils.cpp  winmain.cpp
core/linux/: common.cpp  context.cpp  context.h  nixprof.cpp  posix_vmem.cpp  typedefs.h
core/linux-dist/: bimap.h  dispmanx.cpp  evdev.cpp  evdev.h  evdev_gamepad.h  handler.cpp  handler.h  handler_evdev.cpp  handler_evdev.h  handler_linuxjs.cpp  handler_linuxjs.h  joystick.cpp  libreicast.T  libreicast.cpp  libreicast.h  linux.cpp  linux.h  main.cpp  main.h  mapping.cpp  mapping.h  mappingstore.cpp  mappingstore.h  proxy.cpp  proxy.h  x11.cpp  x11.h  x11_keyboard.h
core/log/: BitSet.h  ConsoleListener.cpp  ConsoleListener.h  ConsoleListenerLibretro.cpp  ConsoleListenerLibretro.h  Log.h  LogManager.cpp  LogManager.h  LogManagerLibretro.cpp  LogManagerLibretro.h  StringUtil.h
core/nacl/: nacl.cpp  nacl_lin.cpp
core/network/: naomi_network.cpp  naomi_network.h  net_platform.h
core/osd/: oslib.h
core/oslib/: audiobackend_alsa.cpp  audiobackend_coreaudio.cpp  audiobackend_coreaudio.h  audiobackend_directsound.cpp  audiobackend_libao.cpp  audiobackend_omx.cpp  audiobackend_oss.cpp  audiobackend_ps4.cpp  audiobackend_pulseaudio.cpp  audiobackend_xaudio.cpp  audiostream.cpp  audiostream.h  audiostream_libretro.cpp  audiostream_libretro.cpp.bak  ds_audiostream.cpp  oslib.h  (+6 more)
docs/: CONTRIBUTING.md  Collaboration guidelines.md  DreamCast_Specs.md  Dynarec Architecture.md  Dynarec_Architecture.md  Naomi_Overview.md  Notable game bugs.md  Notable_Game_Bugs.md  Notes to downstream users.md  Processes.md  Project Goals.md  Release schedule and structure.md  Release_Schedule_and_Structure.md  microphone support notes.txt
esinfo/: .project  AndroidManifest.xml  project.properties
gdtool/: gdtool.sln  gdtool.vcxproj
jni/: Android.mk  Application.mk
libdragoncast/: build.h  core.mk  dc_console.cpp  dc_console.h  nullDC.cpp  serialize.cpp  types.h
libfantasticast/: stdclass.cpp
libswirl/: build.h  core.mk  dispframe.cpp  libswirl.cpp  libswirl.h  nullDC.cpp  serialize.cpp  serialize.h  stdclass.cpp  stdclass.h  types.h  version.h.in
lst/: 18_Wheeler_DX.lst  Airline Pilots.lst  Akatsuki Bk Ausf Achse.lst  Alien Front.lst  Azumanga Daioh Puzzle Bobble.lst  Border Down (Rev A).lst  Capcom Vs. SNK Millennium Fight 2000.lst  Capcom vs SNK 2 Millionaire Fighting 2001 (Rev A).lst  Capcom vs SNK Millenium Fight 2000 Pro.lst  Chaos Field.lst  Cleopatra Fortune Plus.lst  Confidential Mission.lst  Cosmic Smash (Rev A).lst  Cosmic Smash.lst  Crazy Taxi.lst  Dead or Alive 2 Millennium.lst  Dead or Alive 2.lst  Death Crimson OX.lst  Demolish Fist.lst  Dirty Pigskin Football.lst  Doki Doki Idol Star Seeker.lst  Dolphin Blue.lst  Dynamite Deka Ex.lst  Faster Than Speed.lst  Fist of the North Star - Hokuto no Ken.lst  Giant Gram 2000.lst  Giant Gram.lst  Giga Wing 2.lst  Guilty Gear Isuka.lst  Guilty Gear X ver. 1.5.lst  Guilty Gear X.lst  Guilty Gear XX #Reload (Rev A).lst  Guilty Gear XX Accent Core.lst  Guilty Gear XX Slash (Rev A).lst  Guilty Gear XX.lst  Gun Spike ~ Cannon Spike.lst  Gun Survivor 2 - Biohazard - Code Veronica.lst  Heavy Metal Geomatrix.lst  Ikaruga.lst  Jambo Safari.lst  (+85 more)
rec-cpp-gen/: rec-cpp-gen.sln
reibug/: MainWindow.cs  Program.cs  RefRend.cs  reibug.csproj  reibug.sln
reicast/: reicast.sln  reicast.vcxproj  reicast.vcxproj.filters
reidbg/: MainWindow.cs  Program.cs  RefRend.cs  reidbg.sln
reprof/: README.md
shell/: LICENSE  README.md  reicast.sln  reicast.vcxproj  reicast.vcxproj.filters
shell/cmake/: CMakeLists.txt  GetGitRevisionDescription.cmake  config.cmake  ps4sdk.cmake  vktools.cmake
shell/cmake/toolchains/: Linux-x86.cmake
snap/: README.md  snapcraft.yaml
travis-ci/: setup.sh
versioning/: README.md  changelog-beta.sh  changelog-stable.sh  push-beta.sh  release-beta.sh
(+1681 files in other folders)
